--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.17.1",
         "joi": "^17.4.0",
         "mongoose": "^5.12.10",
+        "nodemailer": "^6.6.1",
         "path": "^0.12.7",
         "postcss-cli": "^8.3.1",
         "sanitize-html": "^2.4.0",
