--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "joi": "^17.4.0",
         "mongoose": "^5.12.10",
         "nodemailer": "^6.6.1",
+        "nodemon": "^2.0.7",
         "path": "^0.12.7",
         "postcss-cli": "^8.3.1",
         "sanitize-html": "^2.4.0",
