--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "dependencies": {
         "aos": "^2.3.4",
         "autoprefixer": "^10.2.5",
+        "bcrypt": "^5.0.1",
+        "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^9.0.2",
         "ejs": "^3.1.6",
         "ejs-mate": "^3.0.0",
         "express": "^4.17.1",
+        "express-jwt": "^6.0.0",
+        "express-session": "^1.17.2",
         "joi": "^17.4.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.10",
         "nodemailer": "^6.6.1",
         "nodemon": "^2.0.7",
