--- a/env.example
+++ b/env.example
@@ -7,3 +7,8 @@ JWT_ACCOUNT_ACTIVATION_SECRET =
 JWT_SECRET = 
 JWT_RESET_PASSWORD_SECRET = 
 SESSION_SECRET = 
+event_spreadsheet_id = 
+magazineRecievers_spreadsheet_id = 
+client_email = 
+private_key = 
+magazineRecieverSheet = 
