--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "path": "^0.12.7",
         "postcss-cli": "^8.3.1",
         "sanitize-html": "^2.4.0",
-        "tailwindcss": "^2.1.2"
+        "tailwindcss": "^2.1.2",
+        "uuid": "^8.3.2"
     }
 }
