--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "googleapis": "^39.2.0",
         "joi": "^17.4.0",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.1",
         "mongoose": "^5.12.10",
         "nodemailer": "^6.6.1",
         "nodemon": "^2.0.7",
